--- a/WebAddresBookSolution/1_AdressBook/Views/Shared/_Layout.cshtml
+++ b/WebAddresBookSolution/1_AdressBook/Views/Shared/_Layout.cshtml
@@ -12,9 +12,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
 </head>
 <body>
-	<div class="Container">
-		@RenderBody()
-	</div>
+<div class="Container">
+	@RenderBody()
+</div>
+	<script src="~/Scripts/bootbox.min.js"></script>
 	<script src="~/Scripts/jquery-1.10.2.min.js"></script>
 	<script src="~/Scripts/bootstrap.min.js"></script>
 </body>
