--- a/WebAddresBookSolution/1_AdressBook/Views/Person/Edit.cshtml
+++ b/WebAddresBookSolution/1_AdressBook/Views/Person/Edit.cshtml
@@ -1,12 +1,15 @@
 ﻿
+
 @model _1_AdressBook.Models.PersonModel
 @using _1_AdressBook.Models
 
 
 
 <div class="col-lg-10 col-md-12 offset-lg-1  align-center mt-5">
-	@using (Html.BeginForm("Add", "Person", FormMethod.Post))
+	@using (Html.BeginForm("Edit", "Person", FormMethod.Post))
 	{
+		@Html.HiddenFor(x => x.ID)
+
 		<div class="d-flex">
 			<div class="col-lg-2 offset-lg-2 mt-2 p-2">
 				@Html.LabelFor(x => x.FirstName):
