--- a/WebAddresBookSolution/1_AdressBook/Views/Person/Index.cshtml
+++ b/WebAddresBookSolution/1_AdressBook/Views/Person/Index.cshtml
@@ -3,22 +3,50 @@
 @using System.Web.UI.WebControls
 @model List<_1_AdressBook.Models.PersonModel>
 
-<div class="col-lg-10 offset-lg-1 align-center">
-	<div class="d-flex">
-		<div class="col-lg-6 mt-2 p-2">
-			@Html.ActionLink("Dodaj Wpis", "Add", null, new { @class = "btn btn-primary btn-large float-left " })
-		</div>
 
-		<div class="col-lg-6 mt-2 ml-right p-2">
-			@using (Html.BeginForm("Index", "Person", new { page = 1 }, FormMethod.Post, new { @class = " float-right " }))
+<div class="col-lg-10 offset-lg-1 align-center mt-5">
+	<div class="d-flex justify-content-between">
+		<div class="col-lg-12">
+			@if (TempData["succes"] != null)
 			{
-				@Html.TextBox("filter", "", new { @class = "text-info" })
-				<button type="submit" class="btn">Filtruj</button>
+				if ((string)(TempData["succes"]) != "")
+				{
+					<div class="alert alert-success" role="alert">
+						<h4 class="alert-heading">Sukces</h4>
+						<p>@TempData["succes"]</p>
+					</div>
+				}
 			}
 		</div>
 	</div>
-	<table class="table table-dark align-center mt-2">
+	<div class="d-flex justify-content-between text-center align-center">
+		<div class="col-lg-12">
+			@if (TempData["error"] != null)
+			{
+				if ((string)(TempData["error"]) != "")
+				{
+					<div class="alert alert-success" role="alert">
+						<h4 class="alert-heading">Niepowodzenie</h4>
+						<p>@TempData["error"]</p>
+					</div>
+				}
+			}
+		</div>
+	</div>
+	<div class="d-flex justify-content-between">
+		<div class="col-lg-6">
+			@Html.ActionLink("Dodaj Wpis", "Add", null, new { @class = "btn btn-warning" })
+		</div>
 
+		<div class="col-lg-6 float-right">
+			@using (Html.BeginForm("Index", "Person", new { page = 1 }, FormMethod.Post, new { @class = "float-right" }))
+			{
+				<button type="submit" class="btn-secondary float-right">Filtruj</button>
+				@Html.TextBox("filter", "", new { @class = "text-info float-right" })
+			}
+		</div>
+	</div>
+	<table class="table table-dark align-center mt-2 text-center">
 		<thead>
 			<tr>
 				<th>ID</th>
@@ -28,6 +56,7 @@
 				<th>Email</th>
 				<th>Created</th>
 				<th>Updated</th>
+				<th style="width: 180px">Akcja</th>
 			</tr>
 		</thead>
 		<tbody>
@@ -39,19 +68,25 @@
 					<td>@Html.DisplayFor(x => element.LastName)</td>
 					<td>@Html.DisplayFor(x => element.Phone)</td>
 					<td>@Html.DisplayFor(x => element.Email)</td>
-					<td>@Html.DisplayFor(x => element.Created)</td>
-					<td>@Html.DisplayFor(x => element.Updated)</td>
-				</tr>
-			}
+					<td>@element.GetCreated()</td>
+					<td>@element.GetUpdated()</td>
+					<td>
+						@Html.ActionLink("Edytuj", "Edit", new { element.ID }, new { @class = "btn btn-info float-left" })
+					@Html.ActionLink("Usuń", "Remove", new { element.ID }, new { @class = "btn btn-danger float-right" })
+				</td>
+			</tr>
+		}
 		</tbody>
 	</table>
-	<div class="col-xs-6">
-		@if ((int)TempData["CurrentPage"] != 1)
-		{
-			@Html.ActionLink("Poprzednia Strona", "Index", new { page = (int)TempData["CurrentPage"] - 1 }, new { @class = "btn btn-primary btn-large float-left" })
-		}
-	</div>
-	<div class="col-xs-6">
-		@Html.ActionLink("Następna Strona", "Index", new { page = (int)TempData["CurrentPage"] + 1 }, new { @class = "btn btn-primary btn-large float-right" })
+	<div class="d-flex justify-content-between">
+		<div class="col-lg-6">
+			@if ((int)TempData["CurrentPage"] != 1)
+			{
+				@Html.ActionLink("Poprzednia Strona", "Index", new { page = (int)TempData["CurrentPage"] - 1 }, new { @class = "btn btn-success" })
+			}
+		</div>
+		<div class="col-lg-6 float-right">
+			@Html.ActionLink("Następna Strona", "Index", new { page = (int)TempData["CurrentPage"] + 1 }, new { @class = "btn btn-success float-right" })
+		</div>
 	</div>
 </div>
