--- a/WebAddresBookSolution/1_AdressBook/Views/Person/Index.cshtml
+++ b/WebAddresBookSolution/1_AdressBook/Views/Person/Index.cshtml
@@ -4,7 +4,8 @@
 @model List<_1_AdressBook.Models.PersonModel>
 
 
-<div class="col-lg-10 offset-lg-1 align-center mt-5">
+
+<div class="col-lg-10 offset-lg-1 align-center mt-2">
 	<div class="d-flex justify-content-between">
 		<div class="col-lg-12">
 			@if (TempData["succes"] != null)
@@ -19,7 +20,7 @@
 			}
 		</div>
 	</div>
-	<div class="d-flex justify-content-between text-center align-center">
+	<div class="d-flex justify-content-between text-center align-center mt-2">
 		<div class="col-lg-12">
 			@if (TempData["error"] != null)
 			{
@@ -57,9 +58,9 @@
 			</div>
 		</div>
 	</div>
-	@if (TempData["Filter"] != null)
+	@if (ViewBag.Filter != null)
 	{
-		@Html.Action("Table", "Person", new { page = 1, filter = TempData["Filter"].ToString() })
+		@Html.Action("Table", "Person", new { page = 1, filter = ViewBag.Filter.ToString() })
 	}
 	else
 	{
