--- a/WebAddresBookSolution/1_AdressBook/Views/Person/Remove.cshtml
+++ b/WebAddresBookSolution/1_AdressBook/Views/Person/Remove.cshtml
@@ -16,7 +16,7 @@
 						@Html.LabelFor(x => x.FirstName):
 					</div>
 					<div class="col-lg-4 mt-2 p-2">
-						@Html.TextBoxFor(x => x.FirstName, new { @class = " pull-right", @style = "width:90%;disabled" })
+						@Html.TextBoxFor(x => x.FirstName, new { @class = " pull-right", @style = "width:90%;color: grey", @readonly = "readonly" })
 					</div>
 					<div class="col-lg-4 mt-2 ml-right p-2">
 						@Html.ValidationMessageFor(x => x.FirstName)
@@ -27,7 +27,7 @@
 						@Html.LabelFor(x => x.LastName):
 					</div>
 					<div class="col-lg-4 mt-2 p-2">
-						@Html.TextBoxFor(x => x.LastName, new { @class = " pull-right", @style = "width:90%;disabled" })
+						@Html.TextBoxFor(x => x.LastName, new { @class = " pull-right", @style = "width:90%;color: grey", @readonly = "readonly" })
 					</div>
 					<div class="col-lg-4 mt-2 p-2">
 						@Html.ValidationMessageFor(x => x.LastName)
@@ -38,7 +38,7 @@
 						@Html.LabelFor(x => x.Email):
 					</div>
 					<div class="col-lg-4 mt-2 p-2">
-						@Html.TextBoxFor(x => x.Email, new { @class = " pull-right", @style = "width:90%;disabled" })
+						@Html.TextBoxFor(x => x.Email, new { @class = " pull-right", @style = "width:90%;color: grey", @readonly = "readonly" })
 					</div>
 					<div class="col-lg-4 mt-2 p-2">
 						@Html.ValidationMessageFor(x => x.Email)
@@ -49,7 +49,7 @@
 						@Html.LabelFor(x => x.Phone):
 					</div>
 					<div class="col-lg-4 mt-2 p-2">
-						@Html.TextBoxFor(x => x.Phone, new { @class = " pull-right", @style = "width:90%;disabled" })
+						@Html.TextBoxFor(x => x.Phone, new { @class = " pull-right", @style = "width:90%;color: grey", @readonly = "readonly" })
 					</div>
 					<div class="col-lg-4 mt-2 p-2">
 						@Html.ValidationMessageFor(x => x.Phone)
@@ -62,7 +62,7 @@
 								<button type="submit" class="btn btn-outline-success">Usuń</button>
 							</div>
 							<div class="col-lg-6 float-right">
-								@Html.ActionLink("Anuluj", "Index", @TempData["error"] = "Anulowano usuwanie użytkownika", new { @class = "btn btn-outline-danger float-left" })
+								@Html.ActionLink("Anuluj", "Index", null, new { @class = "btn btn-outline-danger float-left" })
 							</div>
 						</div>
 					</div>
