--- a/WebAddresBookSolution/1_AdressBook/Views/Person/Edit.cshtml
+++ b/WebAddresBookSolution/1_AdressBook/Views/Person/Edit.cshtml
@@ -59,7 +59,7 @@
 				</div>
 				<div class="d-flex align-center">
 					<div class="col-lg-2 offset-lg-6">
-						<button type="submit" class="btn btn-outline-success">Zapisz zmiany</button>
+						<button type="submit" class="btn btn-outline-successs">Zapisz zmiany</button>
 					</div>
 				</div>
 			}
