--- a/WebAddresBookSolution/1_AdressBook/Views/Person/Remove.cshtml
+++ b/WebAddresBookSolution/1_AdressBook/Views/Person/Remove.cshtml
@@ -59,7 +59,7 @@
 					<div class="col-lg-2 offset-lg-6">
 						<div class="d-flex justify-content-between">
 							<div class="col-lg-6">
-								<button type="submit" class="btn btn-outline-success">Usuń</button>
+								<button type="submit" class="btn btn-outline-successs">Usuń</button>
 							</div>
 							<div class="col-lg-6 float-right">
 								@Html.ActionLink("Anuluj", "Index", null, new { @class = "btn btn-outline-danger float-left" })
